# synthesizer

./: .gitignore  README.md  TODO.md
FPGA/SpinalAudioStation/: AudioDataMover.v  AudioStation.v  build.sbt
FPGA/SpinalAudioStation_IP/: SpinalAudioStation_IP.xpr
FPGA/audio_station/: audio_station.xpr  audio_station_overview_wrapper.bit  audio_station_overview_wrapper.xsa  ps7_init.c  ps7_init.h  ps7_init.html  ps7_init_gpl.c  ps7_init_gpl.h
PC_Testbench/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.c  wav.c  wav.h
PC_Testbench/inc/: config.h  d_delay.h  sound.h  wav.h
PC_Testbench/src/: CMakeLists.txt  Ensoniq_Dope_77.csv  Makefile  cmake_install.cmake  d_delay.c  main.c  sound.c  wav.c
PC_Testbench/tests/: wav_read.py
vitis/: .analytics
vitis/.tcf-profiler/: profile_data_jan-04_19-34.html  profile_data_jan-04_19-34.tcfprof  profile_data_jan-04_20-18.html  profile_data_jan-04_20-18.tcfprof  profile_data_jan-07_19-34.html  profile_data_jan-07_19-34.tcfprof  profile_data_jan-07_19-37.html  profile_data_jan-07_19-37.tcfprof  profile_data_jan-07_19-39.html  profile_data_jan-07_19-39.tcfprof  profile_data_jan-07_19-41.html  profile_data_jan-07_19-41.tcfprof  profile_data_jan-08_11-54.html  profile_data_jan-08_11-54.tcfprof  profile_data_jan-08_12-10.html  profile_data_jan-08_12-10.tcfprof  profile_data_jan-08_12-16.html  profile_data_jan-08_12-16.tcfprof  profile_data_jan-08_12-23.html  profile_data_jan-08_12-23.tcfprof  profile_data_jan-08_13-30.html  profile_data_jan-08_13-30.tcfprof
vitis/audio_station/: .cproject  (+2 more)
(+435 files in other folders)
